Font is finally fixed. In mobile changed z-index of foot so now it should not be clipped by the last section image.

--- a/src/App.css
+++ b/src/App.css
@@ -526,7 +526,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 font-size: 14px;
-font-weight: 330;
+font-weight: normal;
 height: fit-content;
 margin: 5px;
 opacity: 0;
@@ -807,6 +807,7 @@ footer > nav > ul {
   footer {
     scroll-snap-align: start;
     position:static;
+    z-index: 11;
     height: 25%;
     flex-direction: column;
   }
